fix scrollbar size

--- a/src/unreal.scss
+++ b/src/unreal.scss
@@ -1,3 +1,4 @@
 ::-webkit-scrollbar {
   width: 20px;
+  height: 20px;
 }
